--- a/app/globals.css
+++ b/app/globals.css
@@ -92,3 +92,16 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes slide-right {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.animate-slide-right {
+  animation: slide-right 2s infinite;
+}
